[package]
name = "switchmonkey"
version = "0.1.0"
authors = ["Yagora <tanguy.charon47@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrussh="0.28.0"
thrussh-keys = "0.17.3"
futures = "0.3.5"
tokio = "0.2.21"
env_logger = "0.7.1"
anyhow = "1.0.31"
